# cob_command_tools

./: .codeclimate.yml  .gitignore  .travis.rosinstall  .travis.rosinstall.kinetic  .travis.rosinstall.melodic  .travis.rosinstall.noetic  .travis.yml  CMakeLists.txt  README  README.md  package.xml  rosdep.yaml  stack.xml
cob_command_gui/: CHANGELOG.rst  CMakeLists.txt  manifest.xml  package.xml  setup.py
cob_command_gui/ros/src/: buttons.py  knoeppkes.py
cob_command_gui/src/: knoeppkes.py
cob_command_gui/src/command_gui_buttons/: __init__.py  command_gui_buttons.py
cob_command_tools/: CHANGELOG.rst  CMakeLists.txt  package.xml
cob_dashboard/: CHANGELOG.rst  CMakeLists.txt  manifest.xml  package.xml  plugin.xml  setup.py
cob_dashboard/formbuilder/: motor_panel.fbp
cob_dashboard/scripts/: cob_dashboard  cob_dashboard_aggregator.py
cob_dashboard/src/cob_dashboard/: breaker_control.py  cob_battery.py  cob_dashboard.py  cob_runstops.py  diagnostics_frame.py  power_state_control.py  pr2_frame.py  rosout_frame.py  status_control.py
cob_dashboard/xrc/: motor_panel.xrc
cob_helper_tools/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
cob_helper_tools/cfg/: HelperTools.cfg
cob_helper_tools/scripts/: auto_init.py  auto_recover.py  auto_tools.py  fake_diagnostics.py  fake_driver.py  visualize_navigation_goals.py
cob_helper_tools/src/cob_auto_tools/: auto_init.py  auto_recover.py
cob_interactive_teleop/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
cob_interactive_teleop/config/: interactive_teleop.yaml  rviz.vcg  teleop.vcg
cob_interactive_teleop/include/but_cob_teleop/: TeleopCOBMarker.h
cob_interactive_teleop/include/cob_interactive_teleop/: interactive_markers_tools.h  parameters_list.h  teleop_cob_marker.h  topics_list.h
cob_interactive_teleop/launch/: cob_interactive_teleop.launch  cob_interactive_teleop_test.launch  interactive_teleop.launch  interactive_teleop_safe.launch  interactive_teleop_test.launch  interactive_teleop_test.xml  rviz.launch
cob_interactive_teleop/lib/: but_cob_interactive_teleop.yaml  cob_interactive_teleop.yaml
cob_interactive_teleop/src/: cob_interactive_teleop.cpp  init.cpp  interactive_markers_tools.cpp  teleop_cob_marker.cpp
cob_interactive_teleop/src/but_cob_teleop/: TeleopCOBMarker.cpp  but_cob_teleop.cpp
cob_interactive_teleop/src/cob_interactive_teleop/: but_cob_teleop.cpp  cob_interactive_teleop.cpp  interactive_markers_tools.cpp  teleop_cob_marker.cpp
cob_monitoring/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  package.xml  setup.py
cob_monitoring/examples/motion_monitor/: interactive_path_publisher.py  interactive_path_publisher.yaml  test_motion_monitor.launch  test_motion_monitor.rviz  test_motion_monitor.yaml
cob_monitoring/src/: battery_light_monitor.py  battery_monitor.py  cpu_monitor.py  ddwrt.py  emergency_stop_monitor.py  hd_monitor.py  hz_monitor.py  motion_monitor.py  net_monitor.py  ntp_monitor.py  ping_computers.py  topic_status_monitor.cpp  wifi_monitor.py  wlan_monitor.py
cob_monitoring/src/netdata_interface/: netdata_interface.py
cob_monitoring/src/netdata_tools/: netdata_tools.py
cob_script_server/: CHANGELOG.rst  CMakeLists.txt  manifest.xml  package.xml  setup.py
cob_script_server/action/: Script.action
cob_script_server/launch/: script_server.launch  script_server.test
cob_script_server/msg/: ScriptState.msg
cob_script_server/scripts/: grasp.py  test_ik_cal.py  test_move_pose_goal_planned.py  test_script.py  test_sound.py
cob_script_server/src/: cob_console  cob_console.py  cob_console_node  script_server.py  script_to_graph.py  script_viewer.py  simple_script_server.py  visualize_navigation_goals.py  xdot.py
cob_script_server/src/simple_script_server/: __init__.py  simple_script_server.py
cob_script_server/srv/: ComposeTrajectory.srv
cob_script_server/test/: action_interface.py  move.py  python_api.py  test_action_interface.py  test_move.py  test_python_api.py  test_say.py  test_script.py  test_script_action_client.py  test_trigger.py  trigger.py
cob_teacher/: mainpage.dox  (+1 more)
cob_teleop/: CHANGELOG.rst  CMakeLists.txt  README-PS3.md  README.md  manifest.xml  package.xml  teleop.yaml  teleop_logitech.yaml  teleop_ps3.yaml
cob_teleop/cfg/: cob_teleop_cob4.cfg  cob_teleop_v2.cfg  led_mode.yaml
cob_teleop/common/src/: cob_teleop_v2_common.cpp
cob_teleop/config/: teleop_logitech.yaml  teleop_ps3.yaml
cob_teleop/models/: teleop_v2.ros_package  teleop_v2.ros_package_diagram
cob_teleop/ros/launch/: teleop_keyboard.launch
cob_teleop/ros/src/: cob_teleop.cpp  cob_teleop_cob4_ros.cpp  cob_teleop_keyboard.cpp  cob_teleop_v1.cpp  cob_teleop_v2_ros.cpp  joy_init  keyboard_publisher.cpp
cob_teleop_cob4/: .cproject  .project  72-ps3.rules  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  ps3joy_node_starter.sh
cob_teleop_cob4/cfg/: arm_left_uri.yaml  arm_uri.yaml  cob_teleop_cob4.cfg  component.yaml
cob_teleop_cob4/common/src/: cob_teleop_cob4_common.cpp
cob_teleop_cob4/launch/: cob_teleop_cob4.launch  cob_teleop_cob4.launch.orig
cob_teleop_cob4/models/: cob4_teleop.ros_package  cob4_teleop.ros_package_diagram
cob_teleop_cob4/ros/src/: cob_teleop_cob4_ros.cpp
generic_throttle/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.py
generic_throttle/config/: cob_config.yaml  test_config.yaml
generic_throttle/launch/: cob_test.launch
generic_throttle/scripts/: generic_throttle_node.py
generic_throttle/src/generic_throttle/: generic_throttle.py
scenario_test_tools/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.py
scenario_test_tools/docs/: conf.py  index.rst  modules.rst
scenario_test_tools/scripts/: always_succeeding_move_base.py  dummy_behavior.py  example_move_base.py  example_test.py  fake_move_base.py
scenario_test_tools/src/scenario_test_tools/: __init__.py  scriptable_action_server.py  scriptable_base.py  scriptable_move_base.py  scriptable_service_server.py  util.py
service_tools/: CHANGELOG.rst  CMakeLists.txt  package.xml
service_tools/scripts/: service_relay
(+39 files in other folders)
