<package format="2">
  <name>cob_command_gui</name>
  <version>0.6.14</version>
  <description>This package provides a simple GUI for operating Care-O-bot.</description>

  <license>Apache 2.0</license>

  <url type="website">http://www.ros.org/wiki/cob_command_gui</url>
  <!-- <url type="bugtracker"></url> -->

  <maintainer email="felixmessmer@gmail.com">Felix Messmer</maintainer>
  <maintainer email="fmw@ipa.fhg.de">Florian Weisshardt</maintainer>
  <author email="fmw@ipa.fhg.de">Florian Weisshardt</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>cob_msgs</exec_depend>
  <exec_depend>cob_script_server</exec_depend>
  <exec_depend>python-gtk2</exec_depend>
  <exec_depend>python-pygraphviz</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>rospy</exec_depend>

</package>
