<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cob_command_gui</name>
  <version>0.6.34</version>
  <description>This package provides a simple GUI for operating Care-O-bot.</description>

  <license>Apache 2.0</license>

  <url type="website">http://www.ros.org/wiki/cob_command_gui</url>
  <!-- <url type="bugtracker"></url> -->

  <maintainer email="felixmessmer@gmail.com">Felix Messmer</maintainer>
  <maintainer email="fmw@ipa.fhg.de">Florian Weisshardt</maintainer>
  <author email="fmw@ipa.fhg.de">Florian Weisshardt</author>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 2">python-setuptools</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 3">python3-setuptools</buildtool_depend>

  <exec_depend>cob_msgs</exec_depend>
  <exec_depend>cob_script_server</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-gi</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-gi</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>rospy</exec_depend>

</package>
