<package>
  <name>cob_command_tools</name>
  <version>0.5.1</version>
  <description>The cob_command_tools stack provides tools, for operating Care-O-bot.</description>
 
  <license>LGPL</license>

  <url type="website">http://ros.org/wiki/cob_command_tools</url>
  <!-- <url type="bugtracker"></url> -->

  <maintainer email="fmw@ipa.fhg.de">Florian Weisshardt</maintainer>
  <maintainer email="nhg@ipa.fhg.de">Nadia Hammoudeh Garcia</maintainer>
  <author email="fmw@ipa.fhg.de">Florian Weisshardt</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>cob_script_server</run_depend>
  <run_depend>cob_dashboard</run_depend>
  <run_depend>cob_interactive_teleop</run_depend>
  <run_depend>cob_command_gui</run_depend>
  <run_depend>cob_teleop</run_depend>
  <run_depend>cob_teleop_cob4</run_depend>





  <export>
    <metapackage/>
  </export>
</package>
