<package format="2">
  <name>cob_command_tools</name>
  <version>0.6.32</version>
  <description>The cob_command_tools stack provides tools, for operating Care-O-bot.</description>

  <license>Apache 2.0</license>

  <url type="website">http://ros.org/wiki/cob_command_tools</url>
  <!-- <url type="bugtracker"></url> -->

  <maintainer email="felixmessmer@gmail.com">Felix Messmer</maintainer>
  <maintainer email="fmw@ipa.fhg.de">Florian Weisshardt</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>cob_command_gui</exec_depend>
  <exec_depend>cob_dashboard</exec_depend>
  <exec_depend>cob_helper_tools</exec_depend>
  <exec_depend>cob_interactive_teleop</exec_depend>
  <exec_depend>cob_monitoring</exec_depend>
  <exec_depend>cob_script_server</exec_depend>
  <exec_depend>cob_teleop</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
