<package format="2">
  <name>cob_dashboard</name>
  <version>0.6.2</version>
  <description>cob_dashboard is a modified version of [[pr2_dashboard]].</description>

  <license>LGPL</license>

  <url type="website">http://ros.org/wiki/cob_dashboard</url>
  <!-- <url type="bugtracker"></url> -->

  <maintainer email="nhg@ipa.fhg.de">Nadia Hammoudeh Garcia</maintainer>
  <author email="aub@ipa.fhg.de">Alexander Bubeck</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>cob_msgs</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_robot_dashboard</exec_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
