<package>
  <name>cob_interactive_teleop</name>
  <version>0.6.2</version>
  <description>COB teleop interactive marker for RViz provided by dcgm-robotics@FIT group.</description>

  <maintainer email="fmw@ipa.fhg.de">Florian Weisshardt</maintainer>
  <maintainer email="spanel@fit.vutbr.cz">Michal Spanel</maintainer>
  <author email="spanel@fit.vutbr.cz">Michal Spanel</author>

  <license>LGPL</license>

  <url type="website">http://ros.org/wiki/cob_interactive_teleop</url>
  <!-- <url type="bugtracker"></url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>interactive_markers</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>rviz</run_depend>

  <export>
    <rosdoc config="rosdoc.yaml"/>
  </export>
</package>
