<package format="2">
  <name>cob_interactive_teleop</name>
  <version>0.6.8</version>
  <description>COB teleop interactive marker for RViz provided by dcgm-robotics@FIT group.</description>

  <maintainer email="richard.bormann@ipa.fraunhofer.de">Richard Bormann</maintainer>
  <author email="spanel@fit.vutbr.cz">Michal Spanel</author>

  <license>Apache 2.0</license>

  <url type="website">http://ros.org/wiki/cob_interactive_teleop</url>
  <!-- <url type="bugtracker"></url> -->

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>interactive_markers</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>visualization_msgs</depend>

  <exec_depend>rviz</exec_depend>

  <export>
    <rosdoc config="rosdoc.yaml"/>
  </export>
</package>
