<package format="2">
  <name>cob_monitoring</name>
  <version>0.6.6</version>
  <description>cob_monitoring</description>

  <license>LGPL</license>

  <url type="website">http://ros.org/wiki/cob_monitoring</url>
  <!-- <url type="bugtracker"></url> -->

  <maintainer email="fmw@ipa.fhg.de">Florian Weisshardt</maintainer>
  <maintainer email="nhg@ipa.fhg.de">Nadia Hammoudeh</maintainer>
  <author email="fmw@ipa.fhg.de">Florian Weisshardt</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>diagnostic_updater</depend>
  <depend>roscpp</depend>
  <depend>topic_tools</depend>

  <exec_depend>actionlib</exec_depend>
  <exec_depend>cob_light</exec_depend>
  <exec_depend>cob_msgs</exec_depend>
  <exec_depend>cob_script_server</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>ipmitool</exec_depend>
  <exec_depend>python-mechanize</exec_depend>
  <exec_depend>python-psutil</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rostopic</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sysstat</exec_depend>

</package>
