<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cob_monitoring</name>
  <version>0.6.20</version>
  <description>cob_monitoring</description>

  <license>Apache 2.0</license>

  <url type="website">http://ros.org/wiki/cob_monitoring</url>
  <!-- <url type="bugtracker"></url> -->

  <maintainer email="felixmessmer@gmail.com">Felix Messmer</maintainer>
  <author email="fmw@ipa.fhg.de">Florian Weisshardt</author>
  <author email="fxm@ipa.fhg.de">Felix Messmer</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>diagnostic_updater</depend>
  <depend>roscpp</depend>
  <depend>topic_tools</depend>

  <exec_depend>actionlib</exec_depend>
  <exec_depend>cob_light</exec_depend>
  <exec_depend>cob_msgs</exec_depend>
  <exec_depend>cob_script_server</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>ifstat</exec_depend>
  <exec_depend>ipmitool</exec_depend>
  <exec_depend>ntpdate</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-paramiko</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-paramiko</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-mechanize</exec_depend>
  <!--exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-mechanize</exec_depend--> <!-- commenting as python3-mechanize is not available for debian:buster (see https://github.com/ipa320/cob_command_tools/issues/289) -->
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-psutil</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-psutil</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-requests</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-requests</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rostopic</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sysstat</exec_depend>

</package>
