<package format="2">
  <name>cob_script_server</name>
  <version>0.6.2</version>
  <description>The cob_script_server package provides a simple interface to operate Care-O-bot. It can be used via the python API or the actionlib interface.</description>

  <license>LGPL</license>

  <url type="website">http://ros.org/wiki/cob_script_server</url>
  <!-- <url type="bugtracker"></url> -->

  <maintainer email="fmw@ipa.fhg.de">Florian Weisshardt</maintainer>
  <author email="fmw@ipa.fhg.de">Florian Weisshardt</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>actionlib_msgs</depend>
  <depend>rostest</depend>
  <depend>trajectory_msgs</depend>

  <exec_depend>actionlib</exec_depend>
  <exec_depend>cob_light</exec_depend>
  <exec_depend>cob_mimic</exec_depend>
  <exec_depend>cob_sound</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>ipython</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>python-pygraphviz</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>tf</exec_depend>

</package>
