<package format="2">
  <name>cob_teleop</name>
  <description>teleop_node_of_v2</description>
  <version>0.6.2</version>
  <maintainer email="fmw@ipa.fhg.de">Florian Weisshardt, Maximilian Sieber</maintainer>
  <author email="fmw@ipa.fhg.de">Florian Weisshardt, Maximilian Sieber</author>
  <license>LGPL</license>
  <url>http://www.ros.org/wiki/cob_teleop</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>actionlib</depend>
  <depend>cob_script_server</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>trajectory_msgs</depend>

</package>
