<package format="2">
  <name>cob_teleop</name>
  <description>Teleop node</description>
  <version>0.6.3</version>
  <maintainer email="nhg@ipa.fhg.de">Nadia Hammoudeh Garcia</maintainer>
  <maintainer email="fmw@ipa.fhg.de">Florian Weisshardt, Maximilian Sieber</maintainer>
  <author email="fmw@ipa.fhg.de">Florian Weisshardt, Maximilian Sieber</author>
  <license>LGPL</license>
  <url>http://www.ros.org/wiki/cob_teleop</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>actionlib</depend>
  <depend>cob_light</depend>
  <depend>cob_script_server</depend>
  <depend>cob_sound</depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

</package>
