<package format="2">
  <name>cob_teleop</name>
  <description>Teleop node</description>
  <version>0.6.22</version>

  <maintainer email="felixmessmer@gmail.com">Felix Messmer</maintainer>
  <author email="fmw@ipa.fhg.de">Florian Weisshardt, Maximilian Sieber</author>

  <license>Apache 2.0</license>
  <url>http://www.ros.org/wiki/cob_teleop</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>actionlib</depend>
  <depend>cob_actions</depend>
  <depend>cob_light</depend>
  <depend>cob_script_server</depend>
  <depend>cob_sound</depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

</package>
